Building docker container